samples/_failures_safe/1761128226_2b8eb8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43874b49.c: In function ‘main’:
./samples/SAFE/__tmp_43874b49.c:140:5: error: expected declaration or statement at end of input
  140 |     if (!init_compression_context(&ctx, 50)) {
      |     ^~
./samples/SAFE/__tmp_43874b49.c:140:5: error: expected declaration or statement at end of input
